...
    required this.selectedListingIndex,
    required this.onListingTap,
  });

  static const _allListings = <_TutorialListing>[
    _TutorialListing(
      location: 'Lenoir',
      date: '1/6',
      time: '1 PM to 2 PM',
      price: '\$5',
    ),
    _TutorialListing(
      location: 'Chase',
      date: '1/6',
      time: '2:45 PM to 3:30 PM',
      price: '\$8',
...
